@@ -1,0 +1,4 @@
+#Generated by ResourceBundle Editor (http://eclipse-rbe.sourceforge.net)
+
+KitsReceiver/receivingMessage = Receiving message part:
+KitsReceiver/kitReceivedMessage = Finished Receiving
